--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
-Hello World
+First Workshop on Analysis of Aerial Motion Imagery (WAAMI)
+WAAMI 2020
+in conjunction with
+25th International Conference on Pattern Recognition (ICPR2020)
+Milan, Italy 13|18 September 2020
+https://www.micc.unifi.it/icpr2020/
+Description:
+In recent years, there has been an exponential increase in aerial motion imagery due to advances in airborne sensor technologies, rising adoption of manned and unmanned aerial vehicles (UAVs), and emergence of new applications associated with these technologies including aerial surveillance, traffic monitoring, search and rescue, disaster relief, and precision agriculture. We are witnessing a growing need for robust aerial image and video analysis capabilities to take full advantage of this data and to address the pressing needs of its applications. Novel methods, particularly those relying on artificial intelligence/machine learning (AI/ML) approaches, coupled with rapid advances in computational hardware (more powerful, lighter weight, lower energy, lower cost computing platforms) are revolutionizing the image processing, pattern recognition, and computer vision fields. 
+
+Topics: 
+The aim of this workshop is to solicit papers from academia, government, and industry researchers with original and innovative works on all aspects of analysis of aerial motion imagery to address the needs in a diverse set of application areas. Of particular interest to this workshop is analysis of aerial wide area motion imagery (WAMI) that is characterized by very large (few square miles) ground coverage. WAMI enables large scale surveillance and monitoring for extended periods of time, but suffers from unique challenges such as hundreds to thousands of moving objects per frame, small object sizes, parallax, and lower frame rates.
+
+Topics of interest include but are not limited to:
+
+Robust feature detection and matching
+Aerial video stabilization
+Object detection and/or recognition in aerial videos
+Multi-object tracking 
+Multi-view object tracking
+Persistent single object tracking
+3D-enabled object tracking
+Landmark detection and recognition for aerial navigation
+Structure-From-Motion
+Aerial 3D reconstruction
+Scene understanding and video summarization for aerial platforms
+Applications of computer vision for aerial platforms
+Embedded video processing for aerial systems
+Multi-sensor data fusion for aerial systems
+Deep learning for aerial image analysis
+Video compression for aerial motion imagery
+Synthetic scene generation for aerial applications
+Autonomous navigation
+Multi-UAV swarm coordination and sensing
+
+Paper Submission: TBA
+
+Important Dates:
+Workshop submission deadline: June 15th, 2020
+Workshop author notification: July 15th, 2020
+Camera-ready submission: July 30th, 2020
+Finalized workshop program: August 15th, 2020
+
+Organizing Committee: 
+Kannappan Palaniappan, University of Missouri (USA)
+Heesung Kwon, USARMY CCDC  Army Research Laboratory (USA)
+Filiz Bunyak, University of Missouri (USA)
+Hadi Aliakbarpour, University of Missouri (USA)
+Priya Narayanan, USARMY CCDC Army Research Laboratory (USA)
+
+Program Committee:
+Sanjeev Agarwal, USARMY CCDC C5ISR (USA)
+May Casterline, NVIDIA (USA)
+Adel Hafiane, INSA Centre Val de Loire (France)
+Chandra Kambhamettu, University of Delaware (USA)
+Guoyu Lu, Rochester Institute of Technology (USA)
+Rengarajan Pelapur, Thermo Fisher Scientific (USA)
+Mahdieh Poostchi, Samsung Electronics (USA)
+David Portugal, University of Coimbra (Portugal)
+Surya Prasath, University of Cincinnati (USA)
+Rao Raghuveer, USARMY CCDC  Army Research Laboratory (USA)
+Walter Scheirer, University of Notre Dame (USA)
+Guna Seetharaman, Navy Research Labaratory (USA)
+Omar Tahri, INSA Centre Val de Loire (France)
+Zhangyang (Atlas) Wang, Texas A&M University (USA)
+Wenjun Zeng, Microsoft Research
