--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body data-gr-c-s-loaded="true">
 	<div class="w3-card-2 w3-middle w3-white" style="width:100%;">
 		<header class="w3-container w3-center">
-			<h3><b>First Workshop on Analysis of Aerial Motion Imagery (WAAMI) <br> WAAMI 2020</b></h3>
+			<h1><b>First Workshop on Analysis of Aerial Motion Imagery (WAAMI) <br> WAAMI 2020</b></h1>
 			<p>
 				<b>
 					<img alt="" src="/2019/SanDiego.jpg" style="width: 100%; height: 291px;">
@@ -132,5 +132,11 @@
 			&nbsp;
 		</ul>
 	</div>
+
+	<div class="w3-card-2 w3-middle w3-white">&nbsp;
+		<p><strong>Contact:</strong></p>
+		<p>Questions should be submitted to bunyak@missouri.edu or aliakbarpourh@missouri.edu&nbsp;</p>
+	</div>
+
 </body>
 </html>
