--- a/Organizers.html
+++ b/Organizers.html
@@ -4,8 +4,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>WAAMI 2020</title>
-    <meta name="description" content="WAAMI">
-    <meta name="keywords" content="multi-object tracking, persistent single object tracking">
     <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/waamistyle.css">
 </head>
@@ -13,6 +11,7 @@
 <body>
 
     <div class="container">
+
         <div id="head">
             <hr />
             <h1 style="text-align:center">
@@ -32,7 +31,7 @@
         <div class="row">
             <div class="span6 offset2" style="padding-top: 10px">
                 <ul class="nav nav-tabs nav-justified">
-                    <li class="active">
+                    <li>
                         <a href="index.html">Home</a>
                     </li>
                     <li>
@@ -41,10 +40,10 @@
                     <li>
                         <a href="Submission.html">Submission</a>
                     </li>
-                    <li>
+                    <li> 
                         <a href="Important Dates.html">Important Dates</a>
                     </li>
-                    <li>
+                    <li class="active">
                         <a href="Organizers.html">Organizers</a>
                     </li>
                     <li>
@@ -57,21 +56,35 @@
 
         <div class="row">
             <div class="span12">
-                <h2>Description</h2>
-                <p>
-                    In recent years, there has been an exponential increase in aerial motion imagery due to advances in airborne sensor technologies, rising adoption of manned and unmanned aerial vehicles (UAVs), and emergence of new applications associated with these technologies including aerial surveillance, traffic monitoring, search and rescue, disaster relief, and precision agriculture. We are witnessing a growing need for robust aerial image and video analysis capabilities to take full advantage of this data and to address the pressing needs of its applications. Novel methods, particularly those relying on artificial intelligence/machine learning (AI/ML) approaches, coupled with rapid advances in computational hardware (more powerful, lighter weight, lower energy, lower cost computing platforms) are revolutionizing the image processing, pattern recognition, and computer vision fields.        
-                </p>
-
-                <br>
-
-                <h2>Important dates</h2>
-                <ul class="">
-                    <li>Workshop submission deadline: <strong>June 15th, 2020</strong></li>
-                    <li>Workshop author notification: <strong>July 15th, 2020</strong></li>
-                    <li>Camera-ready submission: <strong>July 30th, 2020</strong></li>
-                    <li>Finalized workshop program: <strong>August 15th, 2020</strong></li>
+                <h2>Organizing Committee</h2>
+                <ul>
+                    <li>Kannappan Palaniappan, University of Missouri (USA)&nbsp;</li>
+                    <li>Heesung Kwon, USARMY CCDC  Army Research Laboratory (USA)&nbsp;</li>
+                    <li>Filiz Bunyak, University of Missouri (USA)&nbsp;</li>
+                    <li>Hadi Aliakbarpour, University of Missouri (USA)&nbsp;</li>
+                    <li>Priya Narayanan, USARMY CCDC Army Research Laboratory (USA)&nbsp;</li>
                 </ul>
-                <br>
+                <br>  
+
+                <h2>Program Committee</h2>
+                <ul>
+                    <li>Sanjeev Agarwal, USARMY CCDC C5ISR (USA)&nbsp;</li>
+                    <li>May Casterline, NVIDIA (USA)&nbsp;</li>
+                    <li>Adel Hafiane, INSA Centre Val de Loire (France)&nbsp;</li>
+                    <li>Chandra Kambhamettu, University of Delaware (USA)&nbsp;</li>
+                    <li>Guoyu Lu, Rochester Institute of Technology (USA)&nbsp;</li>
+                    <li>Rengarajan Pelapur, Thermo Fisher Scientific (USA)&nbsp;</li>
+                    <li>Mahdieh Poostchi, Samsung Electronics (USA)&nbsp;</li>
+                    <li>David Portugal, University of Coimbra (Portugal)&nbsp;</li>
+                    <li>Surya Prasath, University of Cincinnati (USA)&nbsp;</li>
+                    <li>Rao Raghuveer, USARMY CCDC  Army Research Laboratory (USA)&nbsp;</li>
+                    <li>Walter Scheirer, University of Notre Dame (USA)&nbsp;</li>
+                    <li>Guna Seetharaman, Navy Research Labaratory (USA)&nbsp;</li>
+                    <li>Omar Tahri, INSA Centre Val de Loire (France)&nbsp;</li>
+                    <li>Zhangyang (Atlas) Wang, Texas A&M University (USA)&nbsp;</li>
+                    <li>Wenjun Zeng, Microsoft Research&nbsp;</li>
+                </ul>
+                <br>          
             </div>
         </div>
     </div>
