--- a/Submission.html
+++ b/Submission.html
@@ -4,8 +4,6 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>WAAMI 2020</title>
-    <meta name="description" content="WAAMI">
-    <meta name="keywords" content="multi-object tracking, persistent single object tracking">
     <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/waamistyle.css">
 </head>
@@ -13,7 +11,8 @@
 <body>
 
     <div class="container">
-        <div id="head">
+
+         <div id="head">
             <hr />
             <h1 style="text-align:center">
                 <b>First Workshop on Analysis of Aerial Motion Imagery (WAAMI) <br> WAAMI 2020</b>
@@ -32,13 +31,13 @@
         <div class="row">
             <div class="span6 offset2" style="padding-top: 10px">
                 <ul class="nav nav-tabs nav-justified">
-                    <li class="active">
+                    <li>
                         <a href="index.html">Home</a>
                     </li>
                     <li>
                         <a href="Topics.html">Topics</a>
                     </li>
-                    <li>
+                    <li class="active">
                         <a href="Submission.html">Submission</a>
                     </li>
                     <li>
@@ -57,20 +56,10 @@
 
         <div class="row">
             <div class="span12">
-                <h2>Description</h2>
+                <h2>Paper Submission</h2>
                 <p>
-                    In recent years, there has been an exponential increase in aerial motion imagery due to advances in airborne sensor technologies, rising adoption of manned and unmanned aerial vehicles (UAVs), and emergence of new applications associated with these technologies including aerial surveillance, traffic monitoring, search and rescue, disaster relief, and precision agriculture. We are witnessing a growing need for robust aerial image and video analysis capabilities to take full advantage of this data and to address the pressing needs of its applications. Novel methods, particularly those relying on artificial intelligence/machine learning (AI/ML) approaches, coupled with rapid advances in computational hardware (more powerful, lighter weight, lower energy, lower cost computing platforms) are revolutionizing the image processing, pattern recognition, and computer vision fields.        
+                    TBA
                 </p>
-
-                <br>
-
-                <h2>Important dates</h2>
-                <ul class="">
-                    <li>Workshop submission deadline: <strong>June 15th, 2020</strong></li>
-                    <li>Workshop author notification: <strong>July 15th, 2020</strong></li>
-                    <li>Camera-ready submission: <strong>July 30th, 2020</strong></li>
-                    <li>Finalized workshop program: <strong>August 15th, 2020</strong></li>
-                </ul>
                 <br>
             </div>
         </div>
