--- a/Contact.html
+++ b/Contact.html
@@ -67,7 +67,7 @@
             <div class="span12">
                 <h2>Contact Us</h2>
                 <p>
-                    Questions should be submitted to <a href="mailto:bunyak@missouri.edu?Subject=WAAMI%2020">bunyak@missouri.edu</a> or <a href="mailto:aliakbarpourh@missouri.edu?Subject=WAAMI%2020"> aliakbarpourh@missouri.edu</a>
+                    Questions should be submitted to <a target="_top" href="mailto:bunyak@missouri.edu?Subject=WAAMI%2020">bunyak@missouri.edu</a> or <a target="_top" href="mailto:aliakbarpourh@missouri.edu?Subject=WAAMI%2020> aliakbarpourh@missouri.edu</a>
                 </p> 
                 <br>
             </div>
