Img added and date change

--- a/Contact.html
+++ b/Contact.html
@@ -33,7 +33,7 @@
             </p>
             <br>
 
-            <!-- <img src="img/DLPR_logo2.jpg" class="img-responsive" alt="Cinque Terre">  -->
+            <img src="img/waami.png" class="img-responsive">
 
         </div>
 
