--- a/Important Dates.html
+++ b/Important Dates.html
@@ -33,7 +33,7 @@
             </p>
             <br>
 
-            <!-- <img src="img/DLPR_logo2.jpg" class="img-responsive" alt="Cinque Terre">  -->
+            <img src="img/waami.png" class="img-responsive">
 
         </div>
 
@@ -67,8 +67,8 @@
             <div class="span12">
                 <h2>Important dates</h2>
                 <ul class="">
-                    <li>Workshop submission deadline: <strong>June 15th, 2020</strong></li>
-                    <li>Workshop author notification: <strong>July 15th, 2020</strong></li>
+                    <li>Workshop submission deadline: <strong>June 8th, 2020</strong></li>
+                    <li>Workshop author notification: <strong>July 8th, 2020</strong></li>
                     <li>Camera-ready submission: <strong>July 30th, 2020</strong></li>
                     <li>Finalized workshop program: <strong>August 15th, 2020</strong></li>
                 </ul>
