--- a/Submission.html
+++ b/Submission.html
@@ -65,7 +65,27 @@
 
         <div class="row">
             <div class="span12">
-                <h2>Paper Submission</h2>
+                <h2>Paper Format</h2>
+                <p>
+                    The Proceedings of the WAAMI 2020 workshop will be published online in the Springer Lecture Notes in Computer Science (LNCS) series. Papers will be selected by a single blind (reviewers are anonymous) review process based on their originality, relevance, and clarity of presentation.
+                </p>
+                <br>
+
+                <p>
+                    Submissions must be formatted in accordance with the Springer's Computer Science Proceedings guidelines (<a href="https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines">https://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines</a>). Two types of contribution will be considered:
+                </p>
+                <ul class="">
+                    <li>Full paper (12-15 pages)</li>
+                    <li>Short papers (6-8 pages)</li>
+                </ul>
+                <br>
+                <p>
+                    Accepted manuscripts will be included in the ICPR 2020 Workshop Proceedings Springer volume. Once accepted, at least one author is expected to attend the event and present the paper.
+                </p>
+
+                <br>
+
+                <h2>Submission System</h2>
                 <p>
                     TBA
                 </p>
