PDF flier link added

--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@
                     <li>Finalized workshop program: <strong>August 15th, 2020</strong></li>
                 </ul>
                 <br>
+                <br>
+                <p>
+                    <a href="https://missouri.box.com/s/jjsdtvjajtl5ns501n5z4v63mhdninj6">Download the Call for Paper in PDF</a>
+                </p>
+                <br>
+
             </div>
         </div>
     </div>
