PDF added to files

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <br>
                 <br>
                 <p>
-                    <a href="https://missouri.box.com/s/jjsdtvjajtl5ns501n5z4v63mhdninj6">Download the Call for Paper in PDF</a>
+                    <a href="files/2020_WAAMI_Flier_PC.pdf">Download the Call for Paper in PDF</a>
                 </p>
                 <br>
 
