--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
 
                 <h2>Important dates</h2>
                 <ul class="">
-                    <li>Workshop submission deadline: <strong>June 8th, 2020</strong></li>
-                    <li>Workshop author notification: <strong>July 8th, 2020</strong></li>
-                    <li>Camera-ready submission: <strong>July 30th, 2020</strong></li>
-                    <li>Finalized workshop program: <strong>August 15th, 2020</strong></li>
+                    <li>Workshop submission deadline: <strong>October 3rd, 2020</strong></li>
+                    <li>Workshop author notification: <strong>November 3rd, 2020</strong></li>
+                    <li>Camera-ready submission: <strong>November 15th, 2020</strong></li>
+                    <li>Finalized workshop program: <strong>December 1st, 2020</strong></li>
                 </ul>
                 <br>
                 <br>
