Submission page changed

--- a/Submission.html
+++ b/Submission.html
@@ -66,6 +66,7 @@
         <div class="row">
             <div class="span12">
                 <h2>Paper Format</h2>
+                <br>
                 <p>
                     The Proceedings of the WAAMI 2020 workshop will be published online in the Springer Lecture Notes in Computer Science (LNCS) series. Papers will be selected by a single blind (reviewers are anonymous) review process based on their originality, relevance, and clarity of presentation.
                 </p>
@@ -85,11 +86,22 @@
 
                 <br>
 
-                <h2>Submission System</h2>
                 <p>
-                    TBA
+                    Springer’s proceedings LaTeX templates are available in <a href="https://www.overleaf.com/latex/templates/springer-lecture-notes-in-computer-science/kzwwpvhwnvfj#.WsdHOy5uZpg">Overleaf</a>. Springer encourages authors to include their <a href="https://www.springer.com/gp/authors-editors/orcid?wt_mc=Other.Other.1.AUT642.ORCID%20proceedings%20pilot%202017&utm_medium=other&utm_source=other&utm_content=8232017&utm_campaign=1_barz01_orcid%20proceedings%20pilot%202017">ORCIDs</a> in their papers.
                 </p>
                 <br>
+
+                <h2>Submission System</h2>
+                <br>
+                <p style="color:red";>
+                    SUBMISSIONS NOW OPEN!!! 
+                </p>
+                <br>
+
+                <p style="color:red";>
+                    (Please note that papers not accepted in the general session and fitting WAAMI themes could be submitted <a href="https://cmt3.research.microsoft.com/WAAMI2020">here</a>)
+                </p>
+
             </div>
         </div>
     </div>
