--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
 
         <div class="row">
             <div class="span12">
+
+                <h3 style="color:red">WAAMI 2020 WILL BE HELD ONLINE.<br>
+                SUBMISSION DEADLINE EXTENDED !!!</h3>
+
+                <br>
+
                 <h2>Description</h2>
                 <p>
                     In recent years, there has been an exponential increase in aerial motion imagery due to advances in airborne sensor technologies, rising adoption of manned and unmanned aerial vehicles (UAVs), and emergence of new applications associated with these technologies including aerial surveillance, traffic monitoring, search and rescue, disaster relief, and precision agriculture. We are witnessing a growing need for robust aerial image and video analysis capabilities to take full advantage of this data and to address the pressing needs of its applications. Novel methods, particularly those relying on artificial intelligence/machine learning (AI/ML) approaches, coupled with rapid advances in computational hardware (more powerful, lighter weight, lower energy, lower cost computing platforms) are revolutionizing the image processing, pattern recognition, and computer vision fields.        
@@ -74,9 +80,12 @@
                 <br>
 
                 <h2>Important dates</h2>
+                <p style="color:red; font-size: 20px">
+                    Submission deadline extension !!!
+                </p>
                 <ul class="">
-                    <li>Workshop submission deadline: <strong>October 3rd, 2020</strong></li>
-                    <li>Workshop author notification: <strong>November 3rd, 2020</strong></li>
+                    <li><strong>Workshop submission deadline: October 17th, 2020</strong></li>
+                    <li>Workshop author notification: <strong>November 10th, 2020</strong></li>
                     <li>Camera-ready submission: <strong>November 15th, 2020</strong></li>
                     <li>Finalized workshop program: <strong>December 1st, 2020</strong></li>
                 </ul>
