--- a/Important Dates.html
+++ b/Important Dates.html
@@ -66,9 +66,12 @@
         <div class="row">
             <div class="span12">
                 <h2>Important dates</h2>
+                <p style="color:red; font-size: 20px">
+                    Submission deadline extension !!!
+                </p>
                 <ul class="">
-                    <li>Workshop submission deadline: <strong>October 3rd, 2020</strong></li>
-                    <li>Workshop author notification: <strong>November 3rd, 2020</strong></li>
+                    <li><strong>Workshop submission deadline: October 17th, 2020</strong></li>
+                    <li>Workshop author notification: <strong>November 10th, 2020</strong></li>
                     <li>Camera-ready submission: <strong>November 15th, 2020</strong></li>
                     <li>Finalized workshop program: <strong>December 1st, 2020</strong></li>
                 </ul>
