--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
                     <li>
                         <a href="Contact.html">Contact</a>
                     </li>
+                    <li>
+                        <a href="Program.html">Program</a>
+                    </li>
                     <br />
                 </ul>
             </div>
