--- a/Topics.html
+++ b/Topics.html
@@ -58,6 +58,9 @@
                     <li>
                         <a href="Contact.html">Contact</a>
                     </li>
+                    <li>
+                        <a href="Program.html">Program</a>
+                    </li>
                     <br />
                 </ul>
             </div>
