--- a/Program.html
+++ b/Program.html
@@ -70,15 +70,7 @@
             <div class="span12">
                 <h2>Program</h2>
                 <p>
-                    The WAAMI workshop will be held in conjunction with the ICPR main conference, that will use the UNDERLINE web platform to run the entire ICPR on-line event. The WAAMI workshop will receive a private individual zoom link that will provide a workshop private virtual room for the whole duration of the event. From the UNDERLINE platform any registered person will have the possibility to join the workshop.
-                </p>
-                <br>
-                <p>
-                    All presentations will be oral. Time at disposal for Oral Presentations will be <b>20 minutes</b>. Each slot will be split in <u>15 minutes</u> for the <i>presentation</i> itself and <u>5 minutes</u> for <i>questions</i> from the audience. 
-                </p>
-                <br>
-                <p>
-                    The presenters are kindly asked to provide the slides (pdf) in advance. The entire workshop event will be recorded using the classic ZOOM recording modality. The schedule of the online workshop event is the following:
+                    The WAAMI workshop will be held in conjunction with the ICPR main conference, that will use the UNDERLINE web platform to run the entire ICPR on-line event. The WAAMI workshop will receive a private individual zoom link that will provide a workshop private virtual room for the whole duration of the event. From the UNDERLINE platform any registered person will have the possibility to join the workshop. All presentations will be oral. Time at disposal for Oral Presentations will be <b>20 minutes</b>. Each slot will be split in <u>15 minutes</u> for the <i>presentation</i> itself and <u>5 minutes</u> for <i>questions</i> from the audience. The presenters are kindly asked to provide the slides (pdf) in advance. The entire workshop event will be recorded using the classic ZOOM recording modality. The schedule of the online workshop event is the following (<a href="files/WAAMI_2020_Program.pdf">pdf</a>):
                 </p> 
                 <br>
                 <br>
