--- a/Program.html
+++ b/Program.html
@@ -78,66 +78,122 @@
             <table class="tableizer-table">
                 <thead>
                     <tr class="tableizer-firstrow">
-                        <th colspan="2">WAAMI 2020 Program (Jan 11, 2021)</th>
+                        <th colspan="6">WAAMI 2020 Program (Jan 11, 2021)</th>
                     </tr>
                 </thead>
 
                 <tbody>
                     <tr>
-                        <td>12:00 - 12:15</td>
+                        <td class="secondrow">LA</td>
+                        <td class="secondrow">NY</td>
+                        <td class="secondrow">CET</td>
+                        <td class="secondrow">BEJING</td>
+                        <td class="secondrow">SYD</td>
+                        <td class="secondrow">Program Overview</td>
+                    </tr>
+                    <tr>
+                        <td>3:00 - <br> 3:15 AM</td>
+                        <td>6:00 - <br> 6:15 AM</td>
+                        <td>12:00 - <br> 12:15 PM</td>
+                        <td>7:00 - <br> 7:15 PM</td>
+                        <td>10:00 - <br> 10:15 PM</td>
                         <td>Opening Remarks</td>
                     </tr>
                     <tr>
-                        <td>12:15 - 12:45</td>
+                        <td>3:15 - <br> 3:45 AM</td>
+                        <td>6:15 - <br> 6:45 AM</td>
+                        <td>12:15 - <br> 12:45 PM</td>
+                        <td>7:15 - <br> 7:45 PM</td>
+                        <td>10:15 - <br> 10:45 PM</td>
                         <td>Keynote - TBA</td>
                     </tr>
                     <tr>
-                        <td>12:45 - 13:05</td>
+                        <td>3:45 - <br> 4:05 AM</td>
+                        <td>6:45 - <br> 7:05 AM</td>
+                        <td>12:45 - <br> 13:05 PM</td>
+                        <td>7:45 - <br> 8:05 PM</td>
+                        <td>10:45 - <br> 11:05 PM</td>
                         <td>Fine-tuning for one-look regression vehicle counting in low-shot aerial datasets <br>
                         <i>Aneesh Rangnekar, Yi Yao, Matthew J Hoffman, Ajay Divakaran</i></td>
                     </tr>
                     <tr>
-                        <td>13:05 - 13:25</td>
+                        <td>4:05 - <br> 4:25 AM</td>
+                        <td>7:05 - <br> 7:25 AM</td>
+                        <td>13:05 - <br> 13:25 PM</td>
+                        <td>8:05 - <br> 8:25 PM</td>
+                        <td>11:05 - <br> 11:25 PM</td>
                         <td>Generative Data Augmentation for Vehicle Detection in Aerial Images <br>
                         <i>Hilmi Kumdakcı, Cihan Öngün, Alptekin Temizel</i></td>
                     </tr>        
                     <tr>
-                        <td>13:25 - 13:45</td>
+                        <td>4:25 - <br> 4:45 AM</td>
+                        <td>7:25 - <br> 7:45 AM</td>
+                        <td>13:25 - <br> 13:45 PM</td>
+                        <td>8:25 - <br> 8:45 PM</td>
+                        <td>11:25 - <br> 11:45 PM</td>
                         <td>An Efficient and Reasonably Simple Solution to the Perspective-Three-Point Problem <br>
                         <i>Qida Yu, Guili Xu, Jiachen Shi</i></td>
                     </tr>
                     <tr>
-                        <td>13:45 - 14:05</td>
+                        <td>4:45 - <br> 5:05 AM</td>
+                        <td>7:45 - <br> 8:05 AM</td>
+                        <td>13:45 - <br> 14:05 PM</td>
+                        <td>8:45 - <br> 9:05 PM</td>
+                        <td>11:45 - <br> 12:05 AM</td>
                         <td>Modeling and Simulation Framework for Airborne Camera Systems <br>
                         <i>Marc-Antoine Drouin, Jonathan Fournier, Jonathan Boisvert, Louis Borgeat</i></td>
                     </tr>                    
                     <tr>
-                        <td>14:05 - 14:25</td>
+                        <td>5:05 - <br> 5:25 AM</td>
+                        <td>8:05 - <br> 8:25 AM</td>
+                        <td>14:05 - <br> 14:25 PM</td>
+                        <td>9:05 - <br> 9:25 PM</td>
+                        <td>12:05 - <br> 12:25 AM</td>
                         <td>City-Scale Point Cloud Stitching Using 2D/3D Registration for Large Geographical Coverage <br>
                         <i>Shizeng Yao, Hadi Aliakbarpour, Guna Seetharaman, Kannappan Palaniappan</i></td>
                     </tr>
                     <tr>
-                        <td>14:25 - 14:45</td>
+                        <td>5:25 - <br> 5:45 AM</td>
+                        <td>8:25 - <br> 8:45 AM</td>
+                        <td>14:25 - <br> 14:45 PM</td>
+                        <td>9:25 - <br> 9:45 PM</td>
+                        <td>12:25 - <br> 12:45 AM</td>
                         <td>On The Development of a Classification Based Automated Motion Imagery Interpretability Prediction <br>
                         <i>Hua-mei Chen, Genshe Chen, Erik Blasch</i></td>
                     </tr>
                     <tr>
-                        <td>14:45 - 15:05</td>
+                        <td>5:45 - <br> 6:05 AM</td>
+                        <td>8:45 - <br> 9:05 AM</td>
+                        <td>14:45 - <br> 15:05 PM</td>
+                        <td>9:45 - <br> 10:05 PM</td>
+                        <td>12:45 - <br> 1:05 AM</td>
                         <td>Remote Liveness and Heart Rate Detection from Video <br>
                         <i>Yunbin Deng</i></td>
                     </tr>
                     <tr>
-                        <td>15:05 - 15:25</td>
+                        <td>6:05 - <br> 6:25 AM</td>
+                        <td>9:05 - <br> 9:25 AM</td>
+                        <td>15:05 - <br> 15:25 PM</td>
+                        <td>10:05 - <br> 10:25 PM</td>
+                        <td>1:05 - <br> 1:25 AM</td>
                         <td>RADARSAT-2 Synthetic-Aperture Radar Land Cover Segmentation using Deep Convolutional Neural Networks <br> 
                         <i>Mirmohammad Saadati, Marco Pedersoli, Peter Oliver</i></td>
                     </tr>
                     <tr>
-                        <td>15:25 - 15:45</td>
+                        <td>6:25 - <br> 6:45 AM</td>
+                        <td>9:25 - <br> 9:45 AM</td>
+                        <td>15:25 - <br> 15:45 PM</td>
+                        <td>10:25 - <br> 10:45 PM</td>
+                        <td>1:25 - <br> 1:45 AM</td>
                         <td>Deep Learning Based Domain Adaptation with Data Fusion for Aerial Image Data Analysis <br>
                         <i>Erik Blasch, Jingyang Lu, Roman Ilin, Hua-mei Chen, Dan Shen, Nichole Sullivan, Genshe Chen, Robert Kozma</i></td>
                     </tr>
                     <tr>
-                        <td>15:45 - 16:00</td>
+                        <td>6:45 - <br> 7:00 AM</td>
+                        <td>9:45 - <br> 10:00 AM</td>
+                        <td>15:45 - <br> 16:00 PM</td>
+                        <td>10:45 - <br> 11:00 PM</td>
+                        <td>1:45 - <br> 2:00 AM</td>
                         <td>Closing Remarks and  Open Discussion</td>
                     </tr>
                 </tbody>
