--- a/Organizers.html
+++ b/Organizers.html
@@ -69,14 +69,80 @@
         <div class="row">
             <div class="span12">
                 <h2>Organizing Committee</h2>
-                <ul>
-                    <li>Kannappan Palaniappan, University of Missouri (USA)&nbsp;</li>
-                    <li>Heesung Kwon, USARMY CCDC  Army Research Laboratory (USA)&nbsp;</li>
-                    <li>Filiz Bunyak, University of Missouri (USA)&nbsp;</li>
-                    <li>Hadi Aliakbarpour, University of Missouri (USA)&nbsp;</li>
-                    <li>Priya Narayanan, USARMY CCDC Army Research Laboratory (USA)&nbsp;</li>
-                </ul>
-                <br>  
+
+                <div class="flexWrap">
+                  <div class="flexCol">
+                    <div class="center-img">
+                        <div>
+                            <img src="img/KannappanPalaniappan.png" class="img-responsive"/>  
+                        </div>
+                        <div class="org-name">
+                            <b>Kannappan Palaniappan</b>  
+                        </div>
+                        <div class="org-affiliation">
+                            <i>University of Missouri (USA)</i> 
+                        </div>
+                    </div>
+                  </div>
+                  <div class="flexCol">
+                    <div class="center-img">
+                        <div>
+                            <img src="img/HeesungKwon.png" class="img-responsive"/>  
+                        </div>
+                        <div class="org-name">
+                            <b>Heesung Kwon</b>  
+                        </div>
+                        <div class="org-affiliation">
+                            <i>USARMY CCDC  Army Research Laboratory (USA)</i> 
+                        </div>
+                    </div>
+                  </div>
+                  <div class="flexCol">
+                    <div class="center-img">
+                        <div>
+                            <img src="img/FilizBunyakErsoy.png" class="img-responsive"/>  
+                        </div>
+                        <div class="org-name">
+                            <b>Filiz Bunyak</b>  
+                        </div>
+                        <div class="org-affiliation">
+                            <i>University of Missouri (USA)</i> 
+                        </div>
+                    </div>
+                  </div>
+                  <div class="flexCol">
+                    <div class="center-img">
+                        <div>
+                            <img src="img/AliAkbarpourHadi.png" class="img-responsive"/>  
+                        </div>
+                        <div class="org-name">
+                            <b>Hadi Aliakbarpour</b>  
+                        </div>
+                        <div class="org-affiliation">
+                            <i>University of Missouri (USA)</i> 
+                        </div>
+                    </div>
+                  </div>
+                  <div class="flexCol">
+                    <div class="center-img">
+                        <div>
+                            <img src="img/PriyaNarayanan.png" class="img-responsive"/>  
+                        </div>
+                        <div class="org-name">
+                            <b>Priya Narayanan</b>  
+                        </div>
+                        <div class="org-affiliation">
+                            <i>USARMY CCDC Army Research Laboratory (USA)</i> 
+                        </div>
+                    </div>
+                  </div>
+                  <div class="flexCol2">
+                    <div class="center-img">
+                    </div>
+                  </div>
+                </div>
+
+                <br>   
 
                 <h2>Program Committee</h2>
                 <ul>
