--- a/Organizers.html
+++ b/Organizers.html
@@ -147,6 +147,7 @@
 
                 <h2>Program Committee</h2>
                 <ul>
+                    <li>Ilker Ersoy, University of Missouri (USA)&nbsp;</li>
                     <li>Sanjeev Agarwal, USARMY CCDC C5ISR (USA)&nbsp;</li>
                     <li>May Casterline, NVIDIA (USA)&nbsp;</li>
                     <li>Adel Hafiane, INSA Centre Val de Loire (France)&nbsp;</li>
