--- a/Organizers.html
+++ b/Organizers.html
@@ -147,9 +147,11 @@
 
                 <h2>Program Committee</h2>
                 <ul>
-                    <li>Ilker Ersoy, University of Missouri (USA)&nbsp;</li>
                     <li>Sanjeev Agarwal, USARMY CCDC C5ISR (USA)&nbsp;</li>
+                    <li>Arslan Basharat, Kitware (USA)&nbsp;</li>
                     <li>May Casterline, NVIDIA (USA)&nbsp;</li>
+                    <li>Ilker Ersoy, University of Missouri (USA)&nbsp;</li>
+                    <li>Diego Faria, Aston University (UK)&nbsp;</li>
                     <li>Adel Hafiane, INSA Centre Val de Loire (France)&nbsp;</li>
                     <li>Chandra Kambhamettu, University of Delaware (USA)&nbsp;</li>
                     <li>Guoyu Lu, Rochester Institute of Technology (USA)&nbsp;</li>
@@ -163,10 +165,13 @@
                     <li>Omar Tahri, INSA Centre Val de Loire (France)&nbsp;</li>
                     <li>Zhangyang (Atlas) Wang, Texas A&M University (USA)&nbsp;</li>
                     <li>Wenjun Zeng, Microsoft Research&nbsp;</li>
-                    <li>Diego Faria, Aston University (UK)&nbsp;</li>
-                    <li>Arslan Basharat, Kitware (USA)&nbsp;</li>
                 </ul>
-                <br>          
+                <br> 
+
+                <p>
+                    Webmaster: Gani Rahmon <a target="_top" href="mailto:grzc7@umsystem.edu?Subject=WAAMI%2020">grzc7@umsystem.edu</a> 
+                </p> 
+                <br>
             </div>
         </div>
     </div>
