--- a/Organizers.html
+++ b/Organizers.html
@@ -169,7 +169,7 @@
                 <br> 
 
                 <p>
-                    Webmaster: Gani Rahmon <a target="_top" href="mailto:grzc7@umsystem.edu?Subject=WAAMI%2020">grzc7@umsystem.edu</a> 
+                    Webmaster: Gani Rahmon <a target="_top" href="mailto:grzc7@mail.missouri.edu?Subject=WAAMI%2020">grzc7@mail.missouri.edu</a> 
                 </p> 
                 <br>
             </div>
