--- a/Program.html
+++ b/Program.html
@@ -113,7 +113,8 @@
                         <td>12:45 - <br> 1:05 PM</td>
                         <td>7:45 - <br> 8:05 PM</td>
                         <td>10:45 - <br> 11:05 PM</td>
-                        <td>Fine-tuning for one-look regression vehicle counting in low-shot aerial datasets <br>
+                        <td>Fine-tuning for one-look regression vehicle counting in low-shot aerial datasets 
+                            [<a href="files/slides/RIT-Rangnekar_vehicle-counting.pdf">slides</a>] <br>
                         <i>Aneesh Rangnekar, Yi Yao, Matthew J Hoffman, Ajay Divakaran</i></td>
                     </tr>
                     <tr>
@@ -122,7 +123,8 @@
                         <td>1:05 - <br> 1:25 PM</td>
                         <td>8:05 - <br> 8:25 PM</td>
                         <td>11:05 - <br> 11:25 PM</td>
-                        <td>Generative Data Augmentation for Vehicle Detection in Aerial Images <br>
+                        <td>Generative Data Augmentation for Vehicle Detection in Aerial Images 
+                            [<a href="files/slides/METU-Kumdakci_vehicle-detection.pdf">slides</a>] <br>
                         <i>Hilmi Kumdakcı, Cihan Öngün, Alptekin Temizel</i></td>
                     </tr>        
                     <tr>
@@ -131,7 +133,8 @@
                         <td>1:25 - <br> 1:45 PM</td>
                         <td>8:25 - <br> 8:45 PM</td>
                         <td>11:25 - <br> 11:45 PM</td>
-                        <td>An Efficient and Reasonably Simple Solution to the Perspective-Three-Point Problem <br>
+                        <td>An Efficient and Reasonably Simple Solution to the Perspective-Three-Point Problem 
+                            [<a href="files/slides/Nanjing-Yu_efficient-P3P.pdf">slides</a>] <br>
                         <i>Qida Yu, Guili Xu, Jiachen Shi</i></td>
                     </tr>
                     <tr>
@@ -140,7 +143,8 @@
                         <td>1:45 - <br> 2:05 PM</td>
                         <td>8:45 - <br> 9:05 PM</td>
                         <td>11:45 - <br> 12:05 AM</td>
-                        <td>Modeling and Simulation Framework for Airborne Camera Systems <br>
+                        <td>Modeling and Simulation Framework for Airborne Camera Systems 
+                            [<a href="files/slides/DRDO-Drouin_airborne-cam-systems.pdf">slides</a>] <br>
                         <i>Marc-Antoine Drouin, Jonathan Fournier, Jonathan Boisvert, Louis Borgeat</i></td>
                     </tr>                    
                     <tr>
@@ -149,7 +153,8 @@
                         <td>2:05 - <br> 2:25 PM</td>
                         <td>9:05 - <br> 9:25 PM</td>
                         <td>12:05 - <br> 12:25 AM</td>
-                        <td>City-Scale Point Cloud Stitching Using 2D/3D Registration for Large Geographical Coverage <br>
+                        <td>City-Scale Point Cloud Stitching Using 2D/3D Registration for Large Geographical Coverage 
+                            [<a href="files/slides/UM-Yao_point-cloud-stitching.pdf">slides</a>] <br>
                         <i>Shizeng Yao, Hadi Aliakbarpour, Guna Seetharaman, Kannappan Palaniappan</i></td>
                     </tr>
                     <tr>
@@ -158,7 +163,8 @@
                         <td>2:25 - <br> 2:45 PM</td>
                         <td>9:25 - <br> 9:45 PM</td>
                         <td>12:25 - <br> 12:45 AM</td>
-                        <td>On The Development of a Classification Based Automated Motion Imagery Interpretability Prediction <br>
+                        <td>On The Development of a Classification Based Automated Motion Imagery Interpretability Prediction 
+                            [<a href="files/slides/IFT-Chen_VNIIRS.pdf">slides</a>] <br>
                         <i>Hua-mei Chen, Genshe Chen, Erik Blasch</i></td>
                     </tr>
                     <tr>
@@ -167,7 +173,8 @@
                         <td>2:45 - <br> 3:05 PM</td>
                         <td>9:45 - <br> 10:05 PM</td>
                         <td>12:45 - <br> 1:05 AM</td>
-                        <td>Remote Liveness and Heart Rate Detection from Video <br>
+                        <td>Remote Liveness and Heart Rate Detection from Video 
+                            [<a href="files/slides/BAE-Deng_remote-heart-rate.pdf">slides</a>] <br>
                         <i>Yunbin Deng</i></td>
                     </tr>
                     <tr>
@@ -176,7 +183,8 @@
                         <td>3:05 - <br> 3:25 PM</td>
                         <td>10:05 - <br> 10:25 PM</td>
                         <td>1:05 - <br> 1:25 AM</td>
-                        <td>RADARSAT-2 Synthetic-Aperture Radar Land Cover Segmentation using Deep Convolutional Neural Networks <br> 
+                        <td>RADARSAT-2 Synthetic-Aperture Radar Land Cover Segmentation using Deep Convolutional Neural Networks 
+                            [<a href="files/slides/ETS-Saadati_SAR-landcover.pdf">slides</a>] <br> 
                         <i>Mirmohammad Saadati, Marco Pedersoli, Peter Oliver</i></td>
                     </tr>
                     <tr>
@@ -185,7 +193,8 @@
                         <td>3:25 - <br> 3:45 PM</td>
                         <td>10:25 - <br> 10:45 PM</td>
                         <td>1:25 - <br> 1:45 AM</td>
-                        <td>Deep Learning Based Domain Adaptation with Data Fusion for Aerial Image Data Analysis <br>
+                        <td>Deep Learning Based Domain Adaptation with Data Fusion for Aerial Image Data Analysis 
+                            [<a href="files/slides/IFT-Sullivan_domain-adaptation.pdf">slides</a>] <br>
                         <i>Erik Blasch, Jingyang Lu, Roman Ilin, Hua-mei Chen, Dan Shen, Nichole Sullivan, Genshe Chen, Robert Kozma</i></td>
                     </tr>
                     <tr>
